commented out overflow hidden for ev upload page until it can be fixed

--- a/src/components/EvidenceUploadPage/EvidenceUploadPage.css
+++ b/src/components/EvidenceUploadPage/EvidenceUploadPage.css
@@ -4,7 +4,7 @@ html, body {
     padding: 0;
     width: 100%;
     height: 100%;
-    overflow: hidden; 
+    /* overflow: hidden;  */
 }
 .cameraButton {
     width: 150px; /* Set the width of the button */
